Revert "fixed all flaws on small screens"
This reverts commit 20c46bb11f4b7f3d174892ddc58454ee02a2d7f4.

--- a/styles.scss
+++ b/styles.scss
@@ -81,7 +81,8 @@ section{@include mixin.box-shadow; margin: 1rem 0; padding: 1rem;
 }}
 
 .picture-container {width:100%; height: 50vh; display: flex; @include mixin.box-shadow;}
-.picture-container p {position: relative; height: min-content; left: 1%; top: 86%; font-size: 1.5rem; color: base.$secondary-color; background-color: base.$background-color; padding: 0.2rem; border-radius: 10px; box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.4);}
+.picture-container p {display: inline-block; position: relative; left: 2%; top: 86%; font-size: 1.5rem; color: base.$secondary-color; background-color: base.$background-color; padding: 0.2rem; border-radius: 10px; box-shadow: 0px 3px 15px 5px rgba(0, 0, 0, 0.4);
+  ;}
 .picture-container div {width: 100%;height: 100%;  background-repeat: no-repeat; background-size: cover; background-position: center top; margin: auto;}
 @media (max-width: 480px){
   .picture-container div {background-image: url(./images/picture-mobile.jpeg); background-size: cover; background-position: center;
@@ -95,10 +96,10 @@ section{@include mixin.box-shadow; margin: 1rem 0; padding: 1rem;
   p {font-size: 1.6rem;}}
 }
 
-.connect {display: flex; gap: 1.2em; align-items: center;
-  h2,a{color: base.$warning-color;}
-  a:hover{transform: scale(1.2);}
-  }
+.contact {display: flex; gap: 1em; align-items: center;}
+.contact h2{color: base.$secondary-color;}
+.contact a:hover{transform: scale(1.2);}
+
 
 // project = about.project
 #about-project{@include mixin.container; @include mixin.box-shadow; padding: 1rem;}
@@ -110,9 +111,7 @@ p{margin-top: 1rem;}
 h3{margin-top: 1.2rem;}
 h2{align-self: center};}
 
-#cv-head a, div {text-decoration: none; color: base.$secondary-color; display: flex; gap: 0.4rem;}
-#cv-head i {transform: translateY(2px);}
-
+#cv-head a{text-decoration: none; color: base.$secondary-color;} // maybe change that line, should be standard RE all typical anchor tags
 #cv-education{}
 #cv-experience{}
 #cv-skills{}
